# api/manu_handler.go
@@ -2,6 +2,7 @@ package api
 
 import (
 	"net/http"
+	"time"
 	"visit-service/service"
 
 	"github.com/dapr-platform/common"
@@ -9,7 +10,7 @@ import (
 )
 
 func InitManualHandler(r chi.Router) {
-	r.Post(common.BASE_CONTEXT+"/manual/init-visit-schedule", DebugInitVisitScheduleHandler)
+	r.Post(common.BASE_CONTEXT+"/manual/init-visit-schedule", ManualInitVisitScheduleHandler)
 	r.Post(common.BASE_CONTEXT+"/manual/delete-visit-schedule", DeleteVisitScheduleHandler)
 }
 
@@ -21,9 +22,9 @@ func InitManualHandler(r chi.Router) {
 // @Success 200 {object} common.Response "Success response"
 // @Failure 400 {object} common.Response "Invalid request parameters"
 // @Failure 500 {object} common.Response "Internal server error"
-// @Router /debug/init-visit-schedule [post]
-func DebugInitVisitScheduleHandler(w http.ResponseWriter, r *http.Request) {
-	err := service.DebugInitVisitSchedule()
+// @Router /manual/init-visit-schedule [post]
+func ManualInitVisitScheduleHandler(w http.ResponseWriter, r *http.Request) {
+	err := service.ManualInitVisitSchedule()
 	if err != nil {
 		common.HttpResult(w, common.ErrService.AppendMsg(err.Error()))
 		return
@@ -36,10 +37,22 @@ func DebugInitVisitScheduleHandler(w http.ResponseWriter, r *http.Request) {
 // @Tags Manual
 // @Accept json
 // @Produce json
+// @Param start_day query string true "删除开始时间，2006-01-02"
 // @Success 200 {object} common.Response "Success response"
 // @Failure 400 {object} common.Response "Invalid request parameters"
 // @Failure 500 {object} common.Response "Internal server error"
 // @Router /manual/delete-visit-schedule [post]
 func DeleteVisitScheduleHandler(w http.ResponseWriter, r *http.Request) {
-
+	startDayStr := r.URL.Query().Get("start_day")
+	startDay, err := time.Parse(startDayStr, "2006-01-02")
+	if err != nil {
+		common.HttpResult(w, common.ErrParam.AppendMsg(err.Error()))
+		return
+	}
+	err = service.DeleteVisitSchedule(startDay)
+	if err != nil {
+		common.HttpResult(w, common.ErrParam.AppendMsg(err.Error()))
+		return
+	}
+	common.HttpResult(w, common.OK)
 }
